<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculatorbypankajkcodes"
        android:textSize="20sp"
       />

    <EditText
        android:id="@+id/editTextNumber1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:layout_margin="10dp"
        android:hint="@string/enter_first_number"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/enter_second_number"
         />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/result"
        android:textSize="18sp"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/plusBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:onClick="doPlus"
                android:text="@string/plus"
                android:textColor="#000000"
                android:textSize="36sp"
                app:backgroundTint="#F8F8F8" />

            <Button
                android:id="@+id/minBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:onClick="doMin"
                android:text="@string/min"
                android:textColor="#000000"
                android:textSize="36sp"
                app:backgroundTint="#F8F8F8" />

            <Button
                android:id="@+id/multiBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:onClick="doMulti"
                android:text="@string/multi"
                android:textColor="#000000"
                android:textSize="36sp"
                app:backgroundTint="#F8F8F8" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/divBtn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:onClick="doDiv"
                android:text="@string/div"
                android:textColor="#000000"
                android:textSize="46sp"
                app:backgroundTint="#FFFFFF" />


            <Button
                android:id="@+id/clsBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:onClick="doClear"
                android:text="@string/clr"
                android:textColor="#000000"
                android:textSize="36sp"
                app:backgroundTint="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>